--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -375,12 +375,12 @@ eng:
       # name: "Méthodes d’analyse de la capacité d’échange cationique"
     certification_labels:
       items:
-        # aoc: "Aoc"
-        # aop: "Aop"
-        # aor: "Aor"
+        # aoc: "AOC"
+        # aop: "AOP"
+        # aor: "AOR"
         # bio: "Agriculture Biologique"
-        # ig: "Ig"
-        # igp: "Igp"
+        # ig: "IG"
+        # igp: "IGP"
         # label_rouge: "Label Rouge"
       # name: "Labels"
     certifications:
@@ -390,9 +390,9 @@ eng:
         # bordeaux_blanc_avec_sucres: "Bordeaux blanc avec sucres"
         # bordeaux_clairet: "Bordeaux clairet"
         # bordeaux_claret: "Bordeaux claret"
-        # bordeaux_haut_benauge: "Bordeaux haut benauge"
-        # bordeaux_haut_benauge_avec_sucres: "Bordeaux haut benauge avec sucres"
-        # bordeaux_rose: "Bordeaux rose"
+        # bordeaux_haut_benauge: "Bordeaux Haut-Benauge"
+        # bordeaux_haut_benauge_avec_sucres: "Bordeaux Haut-Benauge avec sucres"
+        # bordeaux_rose: "Bordeaux rosé"
         # bordeaux_rouge: "Bordeaux rouge"
         # bordeaux_superieur_blanc: "Bordeaux supérieur blanc"
         # bordeaux_superieur_rouge: "Bordeaux supérieur rouge"
@@ -540,7 +540,9 @@ eng:
         # symbol: "Symbole"
     controlled_resources:
       items: #?
-      property_natures: #?
+      # name: "Ressources métiers contrôlées"
+      property_natures:
+        # accesses: "Accès"
     countries:
       items:
         ad: "Andorra"
@@ -1524,17 +1526,16 @@ eng:
       items:
         # accident: "Accident"
         # animal_pathology: "Pathologie animale"
-        # bacteria_disease: "Maladies bactériennes"
+        # bacteria_disease: "Maladie bactérienne"
         # climate_issue: "Incident climatique"
         # diarrhea: "Diarrhée"
         # fecondity_problem: "Problème de fécondité"
-        # fungus_disease: "Maladies cryptogamiques"
+        # fungus_disease: "Maladie cryptogamique"
         # issue: "Incident"
         # mammite: "Mammite"
-        # nematoda_disease: "Maladies à nématodes"
-        # other: "Autre"
-        # protozoa_disease: "Maladies virales"
-        # respiratory_problem: "Problèmes respiratoires"
+        # nematoda_disease: "Maladie à nématodes"
+        # protozoa_disease: "Maladie virale"
+        # respiratory_problem: "Problème respiratoire"
         # vegetal_pathology: "Pathologie végétale"
       # name: "Types d’incidents"
       property_natures:
@@ -1544,7 +1545,7 @@ eng:
       items:
         # blaye: "Blaye"
         # bordeaux: "Bordeaux"
-        # bordeaux_haut_benauge: "Bordeaux haut benauge"
+        # bordeaux_haut_benauge: "Bordeaux Haut-Benauge"
         # bordeaux_superieur: "Bordeaux supérieur"
       # name: "Terroir"
     languages:
@@ -1670,21 +1671,22 @@ eng:
       # name: "États de la reproduction mammifère"
     molecules:
       items:
-        # calcium_carbonate: "Carbonate de calcium "
+        # calcium_carbonate: "Carbonate de calcium"
         # copper_sulfate: "Sulfate de cuivre (Ⅰ)"
         # dicopper_sulfate: "Sulfate de cuivre (Ⅱ)"
         # dinitrogen: "Diazote"
-        # diphosphorus_pentoxide: "Diphosphorus pentoxide"
+        # diphosphorus_pentoxide: "Pentoxyde de phosphore"
         # glucose: "Glucose"
-        # lactic_acid: "Acide lactique "
+        # lactic_acid: "Acide lactique"
         # malic_acid: "Acide malique"
         # phosphate: "Phosphate"
         # potash: "Potasse"
         # potassium_bicarbonate: "Bicarbonate de potassium"
         # potassium_ferrocyanide: "Ferrocyanide de potassium"
+        # potassium_oxide: "Oxyde de potassium"
         # sodium_chloride: "Chlorure de sodium"
-        # sucrose: "Sucrose"
-        # tetraphosphorus_decoxide: "Tetraphosphorus decoxide"
+        # sucrose: "Saccharose"
+        # tetraphosphorus_decoxide: "Décaoxyde de phosphore"
       # name: "Molécules"
       property_natures:
         # formula: "Formule"
@@ -1698,7 +1700,7 @@ eng:
         data_acces_method: #?
       items:
         # cartodb: "CartoDB"
-        # charentes_alliance_extranet: "Charentes Alliance extranet"
+        # charentes_alliance_extranet: "Extranet Charentes Alliance"
         # est_elevage: "Est Élevage"
         # lilco: "Lilco"
         # msa: "MSA"
@@ -1898,7 +1900,7 @@ eng:
         # male_young_cow: "Taurillon"
         # milk: "Lait"
         # natural_water: "Eau de pluie / puit"
-        # oenological_product: "Produit oenologique"
+        # oenological_product: "Produit œnologique"
         # other_consumable: "Autres consommables"
         # oyster_band: "Huître"
         # plant: "Plant"
@@ -2020,8 +2022,8 @@ eng:
         # concrete_tank: "Cuve béton"
         # coop:ammonitre_33,5%_vr: "ammonitre COOP 33,5% vrac"
         # coop:aviator_xpro_5l: "Aviator xpro 5l"
-        # coop:avoine_d'hiver_une_de_mai_red_25kg: "Semence d'avoine d'hiver une de mai - sac de 25kg"
-        # coop:bd_s_miradoux_r1_cel_gold_net_25kg: "Semence de Blé tendre Miradoux ( r1 cel gold) - sac de 25kg"
+        # coop:avoine_d'hiver_une_de_mai_red_25kg: "Semence d’avoine d’hiver une de mai - sac de 25kg"
+        # coop:bd_s_miradoux_r1_cel_gold_net_25kg: "Semence de Blé tendre Miradoux (r1 cel gold) - sac de 25kg"
         # coop:bd_s_tablur_r1_cel_gold_net_25kg: "Semence de Blé dur tablur r1 cel gold net - sac de 25kg"
         # coop:bd_s_tablur_r1_gau+red_25kg: "Semence de Blé dur tablur r1 gau+red - sac de 25kg"
         # coop:bth_s_ascott_r1_gau+_red_25kg: "Semence de Blé tendre Ascott (r1 gau+ red) sac de 25kg"
@@ -2155,7 +2157,7 @@ eng:
         # mower: "Faucheuse"
         # mud: "Boue"
         # natural_water: "Eau de pluie / du puit"
-        # oenological_yeast_sc_500g: "Levure oenologique - sachet de 500g"
+        # oenological_yeast_sc_500g: "Levure œnologique - sachet de 500g"
         # office_building: "Bureau"
         # office_building_division: "Pièce de bureau"
         # other_herbicide: "Herbicide autre"
@@ -2350,7 +2352,7 @@ eng:
         # motor_oil: "Huile moteur"
         # mower: "Faucheuse"
         # natural_water: "Eau de pluie ou de puit"
-        # oenological_yeast: "Levure oenologique"
+        # oenological_yeast: "Levure œnologique"
         # organic_fertilizer: "Engrais organique"
         # oyster_band: "Bande d’huître"
         # packaged_process_food: "Aliments transformés et conditionnés"
@@ -2518,8 +2520,12 @@ eng:
           accesses: #?
         farm_worker:
           accesses: #?
-      items: #?
-      property_natures: #?
+      items:
+        # accountant: "Comptable"
+        # farm_worker: "Ouvrier agricole"
+      # name: "Rôles"
+      property_natures:
+        # accesses: "Accès"
     sexes:
       items:
         # female: "Femelle"
@@ -2662,7 +2668,7 @@ eng:
         # radian: "Radian"
         # second: "Seconde"
         square_meter: "Square meter"
-        # ten: "Dix"
+        # ten: "Dizaine"
         # thousand: "Millier"
         # thousand_per_hectare: "Millier par hectare"
         # thousand_per_hectogram: "Millier par hectogramme"
@@ -2735,11 +2741,11 @@ eng:
         # daucus: "Carotte"
         # disinfectant: "Désinfectant"
         # easement: "Aménagement foncier"
-        # egg: "Oeuf"
-        # electricity: "Electricité"
+        # egg: "Œuf"
+        # electricity: "Électricité"
         # ennis: "Ennis"
         equipment: "Equipment"
-        # equus: "Equin"
+        # equus: "Équin"
         # etincel: "Etincel"
         # excrement: "Engrais organiques"
         # fabaceae: "Fabaceae"
@@ -2995,8 +3001,8 @@ eng:
       name: "Name"
       property_natures:
         # derivative_of: "Dérivé"
-        # europa_tsn: "Europa ID"
-        # itis_tsn: "Itis ID"
+        # europa_tsn: "ID Europa"
+        # itis_tsn: "ID ITIS"
     varieties-animal:  #?
       items: #?
         anas: "Anas" #?
@@ -3017,8 +3023,8 @@ eng:
     varieties-triticum_aestivum: #?
     working_sets:
       items:
-        # oenological_regulateds: "Produits oenologiques détenus"
-      # name: "Ensemble de produits"
+        # oenological_regulateds: "Produits œnologiques détenus"
+      # name: "Ensembles de produits"
       property_natures:
         # expression: "Expression"
   procedures:  #?
