--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -91,11 +91,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -396,11 +396,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -701,11 +701,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -1006,11 +1006,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -1589,11 +1589,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -1968,11 +1968,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -2302,11 +2302,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -2801,11 +2801,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -3104,17 +3104,16 @@ fra:
       nature:
         accident: "Accident"
         animal_pathology: "Pathologie animale"
-        bacteria_disease: "Maladies bactériennes"
+        bacteria_disease: "Maladie bactérienne"
         climate_issue: "Incident climatique"
         diarrhea: "Diarrhée"
         fecondity_problem: "Problème de fécondité"
-        fungus_disease: "Maladies cryptogamiques"
+        fungus_disease: "Maladie cryptogamique"
         issue: "Incident"
         mammite: "Mammite"
-        nematoda_disease: "Maladies à nématodes"
-        other: "Autre"
-        protozoa_disease: "Maladies virales"
-        respiratory_problem: "Problèmes respiratoires"
+        nematoda_disease: "Maladie à nématodes"
+        protozoa_disease: "Maladie virale"
+        respiratory_problem: "Problème respiratoire"
         vegetal_pathology: "Pathologie végétale"
     land_parcel_cluster:
       variety:
@@ -3165,11 +3164,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -3470,11 +3469,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -3917,11 +3916,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -4222,11 +4221,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -4481,7 +4480,7 @@ fra:
     net_service:
       reference_name:
         cartodb: "CartoDB"
-        charentes_alliance_extranet: "Charentes Alliance extranet"
+        charentes_alliance_extranet: "Extranet Charentes Alliance"
         est_elevage: "Est Élevage"
         lilco: "Lilco"
         msa: "MSA"
@@ -4585,11 +4584,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -4890,11 +4889,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -5195,11 +5194,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -5499,11 +5498,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -5804,11 +5803,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -6109,11 +6108,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -6445,7 +6444,7 @@ fra:
         motor_oil: "Huile moteur"
         mower: "Faucheuse"
         natural_water: "Eau de pluie ou de puit"
-        oenological_yeast: "Levure oenologique"
+        oenological_yeast: "Levure œnologique"
         organic_fertilizer: "Engrais organique"
         oyster_band: "Bande d’huître"
         packaged_process_food: "Aliments transformés et conditionnés"
@@ -6533,11 +6532,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -6871,11 +6870,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -7175,11 +7174,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
@@ -7696,11 +7695,11 @@ fra:
         daucus: "Carotte"
         disinfectant: "Désinfectant"
         easement: "Aménagement foncier"
-        egg: "Oeuf"
-        electricity: "Electricité"
+        egg: "Œuf"
+        electricity: "Électricité"
         ennis: "Ennis"
         equipment: "Équipement"
-        equus: "Equin"
+        equus: "Équin"
         etincel: "Etincel"
         excrement: "Engrais organiques"
         fabaceae: "Fabaceae"
