--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -320,12 +320,12 @@ fra:
     certification_labels:
       name: "Labels"
       items:
-        aoc: "Aoc"
-        aop: "Aop"
-        aor: "Aor"
+        aoc: "AOC"
+        aop: "AOP"
+        aor: "AOR"
         bio: "Agriculture Biologique"
-        ig: "Ig"
-        igp: "Igp"
+        ig: "IG"
+        igp: "IGP"
         label_rouge: "Label Rouge"
     certifications:
       name: "Certifications"
@@ -339,9 +339,9 @@ fra:
         bordeaux_blanc_avec_sucres: "Bordeaux blanc avec sucres"
         bordeaux_clairet: "Bordeaux clairet"
         bordeaux_claret: "Bordeaux claret"
-        bordeaux_haut_benauge: "Bordeaux haut benauge"
-        bordeaux_haut_benauge_avec_sucres: "Bordeaux haut benauge avec sucres"
-        bordeaux_rose: "Bordeaux rose"
+        bordeaux_haut_benauge: "Bordeaux Haut-Benauge"
+        bordeaux_haut_benauge_avec_sucres: "Bordeaux Haut-Benauge avec sucres"
+        bordeaux_rose: "Bordeaux rosé"
         bordeaux_rouge: "Bordeaux rouge"
         bordeaux_superieur_blanc: "Bordeaux supérieur blanc"
         bordeaux_superieur_rouge: "Bordeaux supérieur rouge"
@@ -484,9 +484,9 @@ fra:
         zinc: "Zinc"
         zirconium: "Zirconium"
     controlled_resources:
-      # name: "Controlled resources"
+      name: "Ressources métiers contrôlées"
       property_natures:
-        # accesses: "Accesses"
+        accesses: "Accès"
       items:
         # accountancy_dashboard: "Accountancy dashboard"
         # accounts: "Accounts"
@@ -1340,24 +1340,23 @@ fra:
       items:
         accident: "Accident"                               # issue
         animal_pathology: "Pathologie animale"             # issue
-        bacteria_disease: "Maladies bactériennes"          # vegetal_pathology
+        bacteria_disease: "Maladie bactérienne"            # vegetal_pathology
         climate_issue: "Incident climatique"               # issue
         diarrhea: "Diarrhée"                               # animal_pathology
         fecondity_problem: "Problème de fécondité"         # animal_pathology
-        fungus_disease: "Maladies cryptogamiques"          # vegetal_pathology
+        fungus_disease: "Maladie cryptogamique"            # vegetal_pathology
         issue: "Incident"
         mammite: "Mammite"                                 # animal_pathology
-        nematoda_disease: "Maladies à nématodes"           # vegetal_pathology
-        other: "Autre"                                     # animal_pathology
-        protozoa_disease: "Maladies virales"               # vegetal_pathology
-        respiratory_problem: "Problèmes respiratoires"     # animal_pathology
+        nematoda_disease: "Maladie à nématodes"            # vegetal_pathology
+        protozoa_disease: "Maladie virale"                 # vegetal_pathology
+        respiratory_problem: "Problème respiratoire"       # animal_pathology
         vegetal_pathology: "Pathologie végétale"           # issue
     lands:
       name: "Terroir"
       items:
         blaye: "Blaye"
         bordeaux: "Bordeaux"
-        bordeaux_haut_benauge: "Bordeaux haut benauge"
+        bordeaux_haut_benauge: "Bordeaux Haut-Benauge"
         bordeaux_superieur: "Bordeaux supérieur"
     languages:
       name: "Langues"
@@ -1485,21 +1484,22 @@ fra:
       property_natures:
         formula: "Formule"
       items:
-        calcium_carbonate: "Carbonate de calcium "
+        calcium_carbonate: "Carbonate de calcium"
         copper_sulfate: "Sulfate de cuivre (Ⅰ)"
         dicopper_sulfate: "Sulfate de cuivre (Ⅱ)"
         dinitrogen: "Diazote"
-        diphosphorus_pentoxide: "Diphosphorus pentoxide"
+        diphosphorus_pentoxide: "Pentoxyde de phosphore"
         glucose: "Glucose"
-        lactic_acid: "Acide lactique "
+        lactic_acid: "Acide lactique"
         malic_acid: "Acide malique"
         phosphate: "Phosphate"
         potash: "Potasse"
         potassium_bicarbonate: "Bicarbonate de potassium"
         potassium_ferrocyanide: "Ferrocyanide de potassium"
+        potassium_oxide: "Oxyde de potassium"
         sodium_chloride: "Chlorure de sodium"
-        sucrose: "Sucrose"
-        tetraphosphorus_decoxide: "Tetraphosphorus decoxide"
+        sucrose: "Saccharose"
+        tetraphosphorus_decoxide: "Décaoxyde de phosphore"
     net_services:
       name: "Services en ligne"
       property_natures:
@@ -1516,7 +1516,7 @@ fra:
         # nature: # Choices comes from nomenclature: activity_families
       items:
         cartodb: "CartoDB"
-        charentes_alliance_extranet: "Charentes Alliance extranet"
+        charentes_alliance_extranet: "Extranet Charentes Alliance"
         est_elevage: "Est Élevage"
         lilco: "Lilco"
         msa: "MSA"
@@ -1709,7 +1709,7 @@ fra:
         male_young_cow: "Taurillon"
         milk: "Lait"
         natural_water: "Eau de pluie / puit"
-        oenological_product: "Produit oenologique"
+        oenological_product: "Produit œnologique"
         other_consumable: "Autres consommables"
         oyster_band: "Huître"
         plant: "Plant"
@@ -1829,8 +1829,8 @@ fra:
         concrete_tank: "Cuve béton"
         coop:ammonitre_33,5%_vr: "ammonitre COOP 33,5% vrac"
         coop:aviator_xpro_5l: "Aviator xpro 5l"
-        coop:avoine_d'hiver_une_de_mai_red_25kg: "Semence d'avoine d'hiver une de mai - sac de 25kg"
-        coop:bd_s_miradoux_r1_cel_gold_net_25kg: "Semence de Blé tendre Miradoux ( r1 cel gold) - sac de 25kg"
+        coop:avoine_d'hiver_une_de_mai_red_25kg: "Semence d’avoine d’hiver une de mai - sac de 25kg"
+        coop:bd_s_miradoux_r1_cel_gold_net_25kg: "Semence de Blé tendre Miradoux (r1 cel gold) - sac de 25kg"
         coop:bd_s_tablur_r1_cel_gold_net_25kg: "Semence de Blé dur tablur r1 cel gold net - sac de 25kg"
         coop:bd_s_tablur_r1_gau+red_25kg: "Semence de Blé dur tablur r1 gau+red - sac de 25kg"
         coop:bth_s_ascott_r1_gau+_red_25kg: "Semence de Blé tendre Ascott (r1 gau+ red) sac de 25kg"
@@ -1964,7 +1964,7 @@ fra:
         mower: "Faucheuse"
         mud: "Boue"
         natural_water: "Eau de pluie / du puit"
-        oenological_yeast_sc_500g: "Levure oenologique - sachet de 500g"
+        oenological_yeast_sc_500g: "Levure œnologique - sachet de 500g"
         office_building: "Bureau"
         office_building_division: "Pièce de bureau"
         other_herbicide: "Herbicide autre"
@@ -2164,7 +2164,7 @@ fra:
         motor_oil: "Huile moteur"
         mower: "Faucheuse"
         natural_water: "Eau de pluie ou de puit"
-        oenological_yeast: "Levure oenologique"
+        oenological_yeast: "Levure œnologique"
         organic_fertilizer: "Engrais organique"
         oyster_band: "Bande d’huître"
         packaged_process_food: "Aliments transformés et conditionnés"
@@ -2286,9 +2286,9 @@ fra:
         burying: "Enfouissement"
         evacuation: "Évacuation"
     roles:
-      # name: "Roles"
+      name: "Rôles"
       property_natures:
-        # accesses: "Accesses"
+        accesses: "Accès"
       item_lists:
         accountant:
           accesses:
@@ -2301,8 +2301,8 @@ fra:
             # own-interventions: "Own-interventions"
             # other-interventions-read: "Other-interventions-read"
       items:
-        # accountant: "Accountant"
-        # farm_worker: "Farm worker"
+        accountant: "Comptable"
+        farm_worker: "Ouvrier agricole"
     sexes:
       name: "Sexes"
       items:
@@ -2455,7 +2455,7 @@ fra:
         radian: "Radian"
         second: "Seconde"
         square_meter: "Mètre carré"
-        ten: "Dix"
+        ten: "Dizaine"
         thousand: "Millier"
         thousand_per_hectare: "Millier par hectare"
         thousand_per_hectogram: "Millier par hectogramme"
@@ -2475,8 +2475,8 @@ fra:
       name: "Variétés"
       property_natures:
         derivative_of: "Dérivé"
-        europa_tsn: "Europa ID"
-        itis_tsn: "Itis ID"
+        europa_tsn: "ID Europa"
+        itis_tsn: "ID ITIS"
       choices:
         # derivative_of: # Choices comes from nomenclature: varieties
       items:
@@ -2527,11 +2527,11 @@ fra:
         daucus: "Carotte"                                  # apiaceae
         disinfectant: "Désinfectant"                       # antiseptic
         easement: "Aménagement foncier"                    # zone
-        egg: "Oeuf"                                        # organic_matter
-        electricity: "Electricité"                         # matter
+        egg: "Œuf"                                         # organic_matter
+        electricity: "Électricité"                         # matter
         ennis: "Ennis"                                     # corylus_avellana
         equipment: "Équipement"                            # matter
-        equus: "Equin"                                     # mammalia
+        equus: "Équin"                                     # mammalia
         etincel: "Etincel"                                 # hordeum_hibernum
         excrement: "Engrais organiques"                    # organic_matter
         fabaceae: "Fabaceae"                               # plant
@@ -2784,8 +2784,8 @@ fra:
         zone: "Zone physique"                              # matter
         zone_property_title: "Titre de propriété terrienne" # property_title
     working_sets:
-      name: "Ensemble de produits"
+      name: "Ensembles de produits"
       property_natures:
         expression: "Expression"
       items:
-        oenological_regulateds: "Produits oenologiques détenus"
+        oenological_regulateds: "Produits œnologiques détenus"
