--- a/config/locales/fra/help/dashboards-index.txt
+++ b/config/locales/fra/help/dashboards-index.txt
@@ -5,16 +5,19 @@
 ===== Présentation de la page =====
 Vous trouverez en haut le menu principal :
   * à gauche, se trouve le menu relatif aux différents modules du logiciel
-  * à droite, se trouve le menu relatif à votre société et vous-même en tant qu'utilisateur.
+  * à droite, se trouve l'aide contextuelle relative à la thématique en cours
 
 Juste en dessous, se trouve le titre de page qui vous permet de savoir en permanence ce que vous êtes en train de faire.
-Lorsque que vous irez un peu plus loin, vous pourrez voir apparaître sur la gauche le menu récapitulant les différentes actions relatives au module utilisé.
 
 ===== Les différents modules =====
 Depuis l'accueil, vous pouvez accéder aux différents modules disponibles dans l'application
   * Gestion des relations Clients/Fournisseurs
   * Comptabilité générale
-  * Gestion commerciale
+  * Gestion commerciale : ventes, achats
+  * Gestion des stocks : inventaires, approvisionnements, livraisons
+  * Gestion de production : animales, végétales, transformations, parcelles, équipements
+  * Outils : gestion des documents, calculateurs, référentiels...
+  * Configuration : paramètres, utilisateurs, plan de comptes, types de produits...
 
 ===== Le tableau de bord  =====
 Il vous permet en un coup d'œil d'avoir accès aux événements pouvant nécessiter un traitement rapide de votre part, ou à des informations générales.
