--- a/config/locales/fra/prints/intervention_registry.xml
+++ b/config/locales/fra/prints/intervention_registry.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="intervention_registry" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="786" leftMargin="28" rightMargin="28" topMargin="28" bottomMargin="28" isTitleNewPage="true" whenResourceMissingType="Empty" uuid="9c1f11b7-03dd-4803-9e1b-41b87b9d23c0">
-	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="427"/>
+	<property name="ireport.zoom" value="1.6105100000000008"/>
+	<property name="ireport.x" value="69"/>
+	<property name="ireport.y" value="911"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="land_parcel_registry"/>
 	<template><![CDATA["/home/djoulin/ekylibre/config/corporate-identity/reports-style.jrtx"]]></template>
 	<style name="Title" fontName="Open Sans" fontSize="30" isBold="true" pdfFontName="Open Sans"/>
@@ -190,7 +190,7 @@
 	<group name="intervention" keepTogether="true">
 		<groupExpression><![CDATA[$F{intervention_id}]]></groupExpression>
 		<groupHeader>
-			<band height="70" splitType="Prevent">
+			<band height="66" splitType="Prevent">
 				<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
 				<textField>
 					<reportElement style="SubTitle" x="34" y="0" width="243" height="30" uuid="10349219-e790-424d-81b9-a92e2ca56970"/>
@@ -214,10 +214,11 @@
 					</textElement>
 					<textFieldExpression><![CDATA[$F{intervention_stopped_at}]]></textFieldExpression>
 				</textField>
-				<textField pattern="###0.00 H" isBlankWhenNull="true">
+				<textField isBlankWhenNull="true">
 					<reportElement style="strong" x="439" y="0" width="66" height="49" uuid="611ff757-faf7-4bca-8e75-81d6c27f8c2d"/>
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$F{intervention_duration}]]></textFieldExpression>
+					<patternExpression><![CDATA["Heures"]]></patternExpression>
 				</textField>
 				<ellipse>
 					<reportElement style="status" x="7" y="21" width="20" height="20" forecolor="#FFFFFF" uuid="2de4b227-f1f0-4b40-8079-4acf8d8f7570"/>
@@ -235,9 +236,6 @@
 					</textElement>
 					<textFieldExpression><![CDATA[$F{production_name}]]></textFieldExpression>
 				</textField>
-				<line>
-					<reportElement style="strong" x="249" y="66" width="537" height="1" uuid="399999a8-ec28-4088-a572-ea0c06d698b6"/>
-				</line>
 				<image onErrorType="Blank" evaluationTime="Group" evaluationGroup="intervention">
 					<reportElement x="569" y="0" width="83" height="60" isPrintWhenDetailOverflows="true" uuid="f6cc34c9-7be5-459d-9d36-e638ced93aa8">
 						<printWhenExpression><![CDATA[!$F{intervention_svg_path}.isEmpty()]]></printWhenExpression>
@@ -399,25 +397,31 @@
 	<detail>
 		<band height="20" splitType="Prevent">
 			<textField isBlankWhenNull="true">
-				<reportElement style="base" x="369" y="0" width="143" height="20" uuid="bcb91033-cd83-4151-9495-57259f8bd3c2"/>
-				<textElement verticalAlignment="Middle"/>
+				<reportElement style="table-td" x="367" y="0" width="143" height="20" uuid="bcb91033-cd83-4151-9495-57259f8bd3c2"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{input_name}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="base" x="251" y="0" width="118" height="20" uuid="c5f86e29-609a-4294-942f-70e918c89882"/>
-				<textElement verticalAlignment="Middle"/>
+				<reportElement style="table-td" x="249" y="0" width="118" height="20" uuid="c5f86e29-609a-4294-942f-70e918c89882"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{input_variable_name}]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="true">
-				<reportElement style="base" x="634" y="0" width="152" height="20" uuid="d4816323-184c-4e99-bf3f-1de9d715c4d8"/>
+				<reportElement style="table-td" x="633" y="0" width="152" height="20" uuid="d4816323-184c-4e99-bf3f-1de9d715c4d8"/>
 				<textElement verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font fontName="Open Sans" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{input_population}+" ( "+$F{input_unit_name}+" )"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement style="base" x="510" y="0" width="124" height="20" uuid="93af19c1-3f9c-426e-9e04-a3c297973887"/>
-				<textElement verticalAlignment="Middle"/>
+				<reportElement style="table-td" x="509" y="0" width="125" height="20" uuid="93af19c1-3f9c-426e-9e04-a3c297973887"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Open Sans"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{input_human_roles}]]></textFieldExpression>
 			</textField>
 		</band>
