--- a/config/locales/jpn/procedures.yml
+++ b/config/locales/jpn/procedures.yml
@@ -81,6 +81,7 @@ jpn:
     # mechanic: "Mécanisien"
     # medicine: "Traitement"
     # medicine_to_give: "Traitement à donner"
+    # medicine_to_spray: "Traitement à pulvériser"
     # milk: "Lait"
     # moluscicide_to_input: "Moluscicide à distribuer"
     # mother_animal: "Mère"
