--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -2125,6 +2125,7 @@ eng:
     backend/product_transfers: "{id}"
     backend/production_supports: "{storage.name} ‒ {production.variant.name} ({production.activity.name} {production.campaign.name})"
     backend/products: "{work_number} {name}"
+    # backend/trackings: "{serial} ‒ {name} ‒ {producer.name}"
     backend/units: "{label} ({name})" #?
     backend/users: "{first_name} {last_name}"
     bakend/entity_links: "{started_at}" #?
