--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -2104,4 +2104,5 @@ fra:
     backend/product_transfers: "{id}"
     backend/production_supports: "{storage.name} ‒ {production.variant.name} ({production.activity.name} {production.campaign.name})"
     backend/products: "{work_number} {name} ({!population} {!unit_name})"
+    backend/trackings: "{serial} ‒ {name} ‒ {producer.name}"
     backend/users: "{first_name} {last_name}"
