--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1003,6 +1003,7 @@ arb:
     # add_marker: "Ajouter un objectif"
     # add_mobile: "Ajouter un n° de portable"
     # add_new_record: "Ajouter un nouveau enregistrement"
+    # add_participation: "Ajouter une participation"
     # add_passage: "Ajouter un produit"
     add_payment: "اضافة دفعة"
     # add_phone: "Ajouter un n° de téléphone"
