--- a/config/locales/fra/enumerize.yml
+++ b/config/locales/fra/enumerize.yml
@@ -45,6 +45,12 @@ fra:
         purchase: "Création d’un achat"
         sale: "Création d’un devis"
         sales_invoice: "Création d’une facture"
+    event_participation:
+      state:
+        accepted: "Accepté"
+        informative: "Pour information"
+        refused: "Refusé"
+        waiting: "En attente de réponse"
     financial_asset:
       depreciation_method:
         graduated: "Dégressive"
