--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -908,6 +908,7 @@ spa:
     # add_marker: "Ajouter un objectif"
     # add_mobile: "Ajouter un n° de portable"
     # add_new_record: "Ajouter un nouveau enregistrement"
+    # add_participation: "Ajouter une participation"
     # add_passage: "Ajouter un produit"
     # add_payment: "Ajouter un encaissement"
     # add_phone: "Ajouter un n° de téléphone"
